fixed modal issue

--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
         <p class="lead"></p>
         <hr class="my-4">
         <p>Click to take the survey!</p>
-        <a class="btn btn-primary btn-lg" href="/public/survey.html" role="button">Take Survey</a>
+        <a href="/survey" class="btn btn-primary btn-lg" href="/public/survey.html" role="button">Take Survey</a>
       </div>
 
     <div class='col s4'>
