--- a/public/survey.html
+++ b/public/survey.html
@@ -13,6 +13,9 @@
     />
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <title>Survey</title>
   </head>
   <body>
@@ -129,10 +132,10 @@
             <option value="5">5 (Strongly Agree)</option>
           </select>
           <br />
-          <!-- Materialize Modal Trigger/Submit Button -->
           <button
             type="submit"
-            data-target="modal1"
+            data-toggle="modal"
+            data-target="#modal1"
             class="waves-effect waves-light btn modal-trigger cyan lighten-1"
             id="submitBtn"
           >
@@ -149,27 +152,52 @@
         </p>
       </div>
 
-      <!-- Materialize Modal Structure -->
-      <div id="modal1" class="modal">
+      
+    </div>
+
+    <!-- <div id="modal1" class="modal">
+      <div class="modal-content">
+        <h4>Meet Your New BFF</h4>
+        <h5 id="matchName"></h5>
+        <img id="matchPic" src="" alt="No Image" width="250px" />
+      </div>
+      <div class="modal-footer">
+        <a
+          href="/survey"
+          class=" modal-action modal-close waves-effect waves-green btn-flat"
+          >Done</a
+        >
+      </div>
+    </div> -->
+
+    <div id="modal1" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <h4>Meet Your New BFF</h4>
-          <h5 id="matchName"></h5>
-          <img id="matchPic" src="" alt="No Image" width="250px" />
-        </div>
-        <div class="modal-footer">
-          <a
-            href="#!"
+          <div class="modal-body">
+            <h4>Meet Your New BFF</h4>
+            <h5 id="matchName"></h5>
+            <img id="matchPic" src="" alt="No Image" width="250px" />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <a
+            href="/survey"
             class=" modal-action modal-close waves-effect waves-green btn-flat"
             >Done</a
           >
+          </div>
         </div>
       </div>
     </div>
 
     <script type="text/javascript">
       $(document).ready(function() {
+
+        $('#modal1').on('shown.bs.modal', function () {
+          $('#submitBtn').trigger('focus')
+        })
+
         $("#submitBtn").on("click", function() {
-          //form validation
           function validateForm() {
             var isValid = true;
             $(".validate").each(function() {
@@ -185,7 +213,6 @@
             return isValid;
           }
           if (validateForm() == true) {
-            //creates a new friend from the values submitted
             var newFriend = {
               name: $("#name")
                 .val()
@@ -206,16 +233,12 @@
                 $("#q10").val()
               ]
             };
-            //Grabs current URL of website
             var currentURL = window.location.origin;
-            // posts  data to friends API.
             $.post(currentURL + "/api/friends", newFriend, function(data) {
               $("#matchName").text(data.name);
               $("#matchPic").attr("src", data.profilePic);
             });
-            // Show the modal with best match
-            $(".modal").modal();
-            //clear form after submission
+
             $("#name").val("");
             $("#photo").val("");
             $("#q1").val("");
@@ -231,7 +254,6 @@
           } else {
             alert("Please fill out ALL fields before submitting survey!");
           }
-          // return false;
         });
       });
     </script>
